--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: pedro.garcia@gmail.com
 brand: Pedro García
 headline: Regate, Velocidad, Inteligencia y Definición
 description: > # this means to ignore newlines until "baseurl:"
-  New Site
+  Delantero
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://footballcloud.net/" # the base hostname & protocol for your site
 copyright: 2019 footballcloud Company, Inc. All Rights Reserved.
